<resources>
    <string name="app_name">SwitchingBetweenApplicationScreens</string>
    <string name="about_title">О программе</string>
    <string name="about_text">
У лукоморья дуб зелёный;\n Златая цепь на дубе том:\n И днём и ночью
<b>кот учёный</b>
\n Всё ходит по цепи кругом;\n Идёт
<b>направо</b>
- песнь заводит,\n
<b>Налево</b>
- сказку говорит.
</string>
    <string name="_2">2</string>
    <string name="secondActivity">SecondActivity</string>
    <string name="send">Отправить</string>
    <string name="discription">Описание</string>
    <string name="adresat">кому</string>
    <string name="button">Button</string>
    <string name="text_message">Text message</string>
</resources>